--- a/css/main.css
+++ b/css/main.css
@@ -115,6 +115,7 @@ box-sizing: border-box;
 /*страницы в комментариях*/
 .page-number {
     list-style: none;
+    display: flex;
 }
 .first-page:hover .first-page__text {
     color: #ec1e79;
@@ -165,6 +166,7 @@ box-sizing: border-box;
     height: 20px;
     border-radius: 25%
 }
+
 /*форма заявки*/
 .form {
     width: 700px;
@@ -172,6 +174,13 @@ box-sizing: border-box;
     background: #f5f5f5;
     border-radius: 3px;
     padding: 45px 70px;
+    flex-direction: row;
+}
+.name-form {
+    display: flex;
+}
+.form__row {
+  margin-bottom: 20px;
 }
 .form__title {
     font-size: 50px;
@@ -179,18 +188,38 @@ box-sizing: border-box;
     color: #221f1f;
     margin-bottom: 25px;
 }
+.form__field-title {
+  color: #221f1f;
+  font-size: 14px;
+  margin-bottom: 7px;
+}
 .form__cell {
     display: block;
     float: left;
+    width: 270px;
 }
 .form__input-text {
   width: 100%;
   height: 45px;
   padding: 13px 10px;
-  font-size: 14px;
+  font-size: 14px;  
   font-weight: 300px;
   border: 1px solid transparent;
   border-radius: 3px;
+}
+.form__input-text:focus{
+    border-color:#ec1e79;
+    outline: none;
+}
+.form__textarea:focus {
+    border-color: #ec1e79;
+    outline: none;
+}
+.form__cell:first-child {
+    margin-right: 20px;
+}
+.form__textarea-label:first-child {
+    margin-right: 20px;
 }
 .form__textarea {
   height: 90px;
@@ -200,6 +229,12 @@ box-sizing: border-box;
   padding: 10px;
   resize: none;
   font-size: 14px;
+  border: 1px solid transparent;
+  border-radius: 3px;
+}
+form__textarea:focus {
+    border-color: #ec1e79;
+    outline: none;
 }
 /*партнеры*/
 .partners__list {
