--- a/css/main.css
+++ b/css/main.css
@@ -170,7 +170,6 @@ box-sizing: border-box;
 /*форма заявки*/
 .form {
     width: 700px;
-    height: 400px;
     background: #f5f5f5;
     border-radius: 3px;
     padding: 45px 70px;
@@ -231,6 +230,63 @@ box-sizing: border-box;
 }
 form__textarea:focus {
     border-color: #ec1e79;
+    outline: none;
+}
+.form__radio-elem {
+    display: inline-block;
+    vertical-align: middle;
+    display: none;
+}
+.form__radio-elem:checked + .form__radio-fake {
+    border: 1px solid #ec227b;
+}
+
+.form__radio-elem:checked + .form__radio-fake + .form__radio-text {
+    color: #ec227b;
+}
+.form__radio-elem:checked + .form__radio-fake::after {
+    display: block;
+}
+
+.form__radio-text {
+    display: inline-block;
+    vertical-align: middle;
+}
+.form__radio-fake {
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    border-radius: 50%;
+    border: 1px solid #cbcbcb;
+    position: relative;
+    background: -webkit-linear-gradient(top, #fdfdfd 0%,#efefef 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #fdfdfd 0%,#efefef 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+}
+.form__radio-fake::after {
+    content: "";
+    display: none;
+    width: 8px;
+    height: 8px;
+    background: #ec227b;
+    border-radius: 50%;
+    position: absolute;
+    top: 5px;
+    left: 5px;
+}
+.form__controls-left, .form__controls-right {
+    float: left;
+    width: 50%;
+}
+.form__controls-right {
+    text-align: right;
+}
+.form__submit {
+    display: inline-block;
+    text-align: center;
+    background: #27273e;
+    width: 138px;
+    height: 45px;
+    border-radius: 3px;
     outline: none;
 }
 /*партнеры*/
