--- a/css/components/main.css
+++ b/css/components/main.css
@@ -117,6 +117,8 @@
 }
 .services__item {
     width: 250px;
+    float: left;
+    margin-bottom: 44px;
 }
 .first-tarif {
     background-color: #27273e;
@@ -124,6 +126,7 @@
     position: relative;
     overflow: hidden;
     border-radius: 3px;
+    margin-bottom: 20px;
 }
 .first-tarif__img {
     opacity: .15;
@@ -137,6 +140,7 @@
     position: relative;
     overflow: hidden;
     border-radius: 3px;
+    margin-bottom: 20px;
 }
 .second-tarif__img {
     opacity: .15;
@@ -152,6 +156,7 @@
     position: relative;
     overflow: hidden;
     border-radius: 3px;
+    margin-bottom: 20px;
 }
 .third-tarif__img {
     opacity: .15;
@@ -179,6 +184,7 @@
     position: relative;
     overflow: hidden;
     border-radius: 5px;
+    margin-bottom: 20px;
 }
 .fifth-tarif__img {
     opacity: .15;
@@ -192,6 +198,7 @@
     position: relative;
     overflow: hidden;
     border-radius: 3px;
+    margin-bottom: 20px;
 }
 .sixth-tarif__img {
     opacity: .15;
