--- a/css/components/comments.css
+++ b/css/components/comments.css
@@ -12,15 +12,13 @@
     overflow: hidden;
 }
 .third-comment__img {
-    width: 162px;
-    height: 162px;
-    overflow: hidden;
-}
-.third-comment-elipse__img {
+    background: #f5f5f5;
     width: 162px;
     height: 162px;
     border-radius: 50%;
     overflow: hidden;
+    background-image: url('../../img/comments/third comment.png');
+    background-repeat: no-repeat;
 }
 .fourth-comment__img {
     width: 162px;
@@ -33,49 +31,49 @@
     list-style: none;
     display: flex;
 }
-.first-page:hover .first-page__text {
+.first-page:hover  {
     color: #ec1e79;
     background: #27273e;
     width: 20px;
     height: 20px;
     border-radius: 25%
 }
-.second-page:hover .second-page__text {
+.second-page:hover  {
     color: #ec1e79;
     background: #27273e;
     width: 20px;
     height: 20px;
     border-radius: 25%
 }
-.third-page:hover .third-page__text {
+.third-page:hover  {
     color: #ec1e79;
     background: #27273e;
     width: 20px;
     height: 20px;
     border-radius: 25%
 }
-.fourth-page:hover .fourth-page__text {
+.fourth-page:hover  {
     color: #ec1e79;
     background: #27273e;
     width: 20px;
     height: 20px;
     border-radius: 25%
 }
-.fifth-page:hover .fifth-page__text {
+.fifth-page:hover  {
     color: #ec1e79;
     background: #27273e;
     width: 20px;
     height: 20px;
     border-radius: 25%
 }
-.sixth-page:hover .sixth-page__text {
+.sixth-page:hover  {
     color: #ec1e79;
     background: #27273e;
     width: 20px;
     height: 20px;
     border-radius: 25%
 }
-.seventh-page:hover .seventh-page__text {
+.seventh-page:hover {
     color: #ec1e79;
     background: #27273e;
     width: 20px;
