--- a/css/components/comments.css
+++ b/css/components/comments.css
@@ -1,15 +1,38 @@
 /*комментаторы*/   
+.section-title-comments {
+    margin-bottom: 51px;
+}
+.data {
+    margin-bottom: -20px;
+}
+.name {
+    margin-bottom: -10px;
+}
+.first-comment {
+    display: flex;
+}
+.comment-text {
+    width: 698px;
+    margin-left: 20px;
+    margin-top: -20px;
+}
 .first-comment__img {
     width: 162px;
     height: 162px;
     border-radius: 50%;
     overflow: hidden;
 }
+.second-comment {
+    display: flex;
+}
 .second-comment__img {
     width: 162px;
     height: 162px;
     border-radius: 50%;
     overflow: hidden;
+}
+.third-comment {
+    display: flex;
 }
 .third-comment__img {
     background: #f5f5f5;
@@ -19,6 +42,9 @@
     overflow: hidden;
     background-image: url('../../img/comments/third comment.png');
     background-repeat: no-repeat;
+}
+.fourth-comment {
+    display: flex;
 }
 .fourth-comment__img {
     width: 162px;
