--- a/css/components/form.css
+++ b/css/components/form.css
@@ -3,6 +3,7 @@
     background: #f5f5f5;
     border-radius: 3px;
     padding: 45px 70px;
+    margin-bottom: 70px;
 }
 .form__row {
   margin-bottom: 20px;
@@ -110,12 +111,9 @@ form__textarea:focus {
     top: 5px;
     left: 5px;
 }
-.form__controls-left, .form__controls-right {
-    float: left;
-    width: 50%;
-}
 .form__controls-right {
-    text-align: right;
+    float: right;
+    margin-top: -20px;
 }
 .form__submit {
     display: inline-block;
