--- a/css/components/intro.css
+++ b/css/components/intro.css
@@ -15,6 +15,8 @@
     text-decoration: none;
     font-weight: bold;
     border: 3px solid #ec1e79;
+    transition: 1.5s;
+    -webkit-transition: 1.5s;
 }
 .wrapper__welcome:before {
     content: "";
@@ -32,4 +34,8 @@
     left: 50%;
     transform: translate(-50%, -50%);
     -webkit-transform: translate(-50%, -50%);
+}
+.welcome__btn:hover {
+    color: #ffffff;
+    background: #ec1e79;
 }
