--- a/css/components/sidebarcss.css
+++ b/css/components/sidebarcss.css
@@ -63,13 +63,21 @@
 }
 .nav-menu__link:hover .nav-menu__icon-main {
     background-image: url('../../img/sidebar/main_icon active.png');
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
 }
 .nav-menu__link:hover .nav-menu__icon-prices {
     background-image: url('../../img/sidebar/wallet_active.png');
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
 }
 .nav-menu__link:hover .nav-menu__icon-reviews {
     background-image: url('../../img/sidebar/feed_icon black.png');
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
 }
 .nav-menu__link:hover .nav-menu__text{
     color: #221f1f;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
 }
